container spacing fix

--- a/css/about-card.css
+++ b/css/about-card.css
@@ -6,7 +6,7 @@
   border-radius: .25rem;
   padding: 1rem;
   box-shadow: var(--bshad);
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
 .about-card h2 {
